crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/full_support_jsx.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.vue
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script lang="jsx">
import { sure } from "sure.js";
import z from "zod";

let schema = z.object().optional();
schema + sure();

function _FunctionalComponent() {
	return <div></div>;
}
</script>

<template>
	<div></div>
</template>

<style>
.class {
	background: red;
}
</style>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
