crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/full_support_tsx.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.vue
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script lang="tsx">
import { sure } from "sure.js";
import z from "zod";

interface Props {
	title: string;
}

let schema = z.object().optional();
schema + sure();
const _props: Props = { title: "Hello" };

function _FunctionalComponent() {
	return <div></div>;
}
</script>

<template>
	<div></div>
</template>

<style>
.class {
	background: red;
}
</style>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
