crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/html_comment_suppresses_vue_expression_rule.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --error-on-warnings file.vue
```

## `biome.json`

```json
{
  "html": { "experimentalFullSupportEnabled": true },
  "linter": {
    "rules": {
      "recommended": false,
      "correctness": { "noUndeclaredVariables": "error" }
    }
  }
}
```

## `file.vue`

```vue
<template>
  <!-- biome-ignore lint/correctness/noUndeclaredVariables: intentionally external -->
  <div :title="missingValue" />
</template>
```

# Emitted Messages

```block
biome.json:3:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
    2 │   "html": { "experimentalFullSupportEnabled": true },
  > 3 │   "linter": {
      │             ^
  > 4 │     "rules": {
  > 5 │       "recommended": false,
  > 6 │       "correctness": { "noUndeclaredVariables": "error" }
  > 7 │     }
  > 8 │   }
      │   ^
    9 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
```
