crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/lint_and_fix_vue_template_expressions.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": { "experimentalFullSupportEnabled": true },
  "linter": { "rules": { "style": { "useTemplate": "error" } } }
}
```

## `file.vue`

```vue
<script setup>
const b = "x";
</script>
<template>
  <div>{{ `a${b}` }}</div>
  <p>
    {{
      `a${b}`
    }}
  </p>
</template>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
