crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/lint_vue_deep_pseudo_class.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<template>
  <div class="parent"><span class="child" /></div>
</template>

<style scoped>
.parent :deep(.child) {}
.parent :unknown {}
</style>

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue:7:10 lint/correctness/noUnknownPseudoClass ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected unknown pseudo-class unknown 
  
    5 │ <style scoped>
    6 │ .parent :deep(.child) {}
  > 7 │ .parent :unknown {}
      │          ^^^^^^^
    8 │ </style>
    9 │ 
  
  i See MDN web docs for more details.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
