crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/lint_vue_should_not_add_extra_newlines_in_embedded_snippet.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write file.vue
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script>
import { computed } from "vue";
</script>
```

# Emitted Messages

```block
file.vue:2:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ <script>
  > 2 │ import { computed } from "vue";
      │        ^^^^^^^^^^^^
    3 │ </script>
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1   │ - 
    2   │ - import·{·computed·}·from·"vue";
      1 │ + 
    3 2 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 warning.
```
