crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/no_assign_in_expressions_triggered_in_template_interpolation.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script setup>
let counter = 0;
</script>
<template>
  <p>{{ counter += 1 }}</p>
</template>
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue:5:9 lint/suspicious/noAssignInExpressions ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The assignment should not be in an expression.
  
    3 │ </script>
    4 │ <template>
  > 5 │   <p>{{ counter += 1 }}</p>
      │         ^^^^^^^^^^^^
    6 │ </template>
  
  i The use of assignments in expressions is confusing.
    Expressions are often considered as side-effect free.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
